<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/imageButton_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_settings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_textView0_text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_gravity="start"
            android:foregroundGravity="center_vertical"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_LinearLayout1_margin"
        android:layout_marginBottom="@dimen/activity_LinearLayout1_margin"
        android:background="@drawable/text_box"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/activity_LinearLayout1_padding">

        <TextView
            android:id="@+id/textView_result"
            android:layout_width="@dimen/activity_textView_result_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/ResultTextAppearance"
            tools:text="@string/activity_textView_text" />

        <ImageButton
            android:id="@+id/imageButton_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_imageButton_copy_padding"
            android:src="@drawable/ic_copy_black_24dp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/ImageView_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/lock_shape"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_symbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/activity_textView_symbols_text" />

        <TextView
            android:id="@+id/textView_textSafetyPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/activity_textView_textSafetyPassword_text" />
    </RelativeLayout>

    <EditText
        android:id="@+id/textEdit_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/activity_textEdit_source_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_RelativeLayout_marginTop"
        android:background="@drawable/relative_box"
        android:padding="@dimen/activity_RelativeLayout_padding">

        <Button
            android:id="@+id/button_generatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/activity_button_generatePassword_text" />

        <TextView
            android:id="@+id/textView_helpPasswordLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_generatePassword"
            android:layout_marginTop="@dimen/activity_textView_helpPasswordLength_marginTop"
            android:paddingLeft="@dimen/activity_textView_helpPasswordLength_paddingLeft"
            android:text="@string/activity_textView_helpPasswordLength_text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText_passwordLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_helpPasswordLength"
            android:layout_marginTop="@dimen/activity_editText_PasswordLength_marginTop"
            android:ems="8"
            android:inputType="numberDecimal"
            android:text="@string/activity_editText_PasswordLength_text"
            android:textAlignment="center" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_generatePassword"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:paddingRight="@dimen/activity_LinearLayout2_paddingRight">


            <CheckBox
                android:id="@+id/checkBox_isUppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_checkBox_isUppercase_text" />

            <CheckBox
                android:id="@+id/checkBox_isNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_checkBox_isNumber_text" />

            <CheckBox
                android:id="@+id/checkBox_isSpecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_checkBox_isSpecial_text" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>